--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,13 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2  # Update to v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2  # Update to v2
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4  # Update to v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
